Bug 3481 - Archive 4586NP changer is not recognized
Summary: Archive 4586NP changer is not recognized
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 3.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1997-05-03 17:10 UTC by Bruce Albrecht
Modified: 2017-12-04 01:32 UTC (History)
0 users

See Also:


Attachments
file.diff (877 bytes, patch)
1997-05-03 17:10 UTC, Bruce Albrecht
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Bruce Albrecht 1997-05-03 17:10:00 UTC
Archive 4586NP changer is not recognized because scsiconf only looks
at logical unit 0.

How-To-Repeat: 
Boot with Archive 4586NP connected.
Comment 1 Joerg Wunsch freebsd_committer freebsd_triage 1997-05-03 23:25:30 UTC
State Changed
From-To: open->closed

Suggested change applied in rev 1.85 of scsiconf.c.  Thanks! 

p.s.: Please, don't cut&paste from an xterm.  This messes up the tabs.