Add the Archive 4586NP tape changer.

PR:		kern/3481
Submitted by:	bruce@zuhause.mn.org (Bruce Albrecht)